objects/SNPCAPIQ__S_P_Capital_IQ_Financials__c.object
<CustomObject>
    <fields>
        <fullName>SNPCAPIQ__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Financials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Capital_Expenditure__c</fullName>
        <label>Capital Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Cash_From_Financing__c</fullName>
        <label>Cash From Financing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Cash_From_Investing__c</fullName>
        <label>Cash From Investing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Cash_From_Operations__c</fullName>
        <label>Cash From Operations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Currency__c</fullName>
        <label>Currency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__EBITDA__c</fullName>
        <label>EBITDA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__EBIT__c</fullName>
        <label>EBIT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Filing_Date__c</fullName>
        <label>Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Financial_Period_Id__c</fullName>
        <label>Financial Period Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Fiscal_Period_Ending__c</fullName>
        <label>Fiscal Period Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Gross_Profit__c</fullName>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Levered_Free_Cash_Flow__c</fullName>
        <label>Levered Free Cash Flow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Net_EPS_Basic__c</fullName>
        <label>Net EPS Basic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Net_EPS_Diluted__c</fullName>
        <label>Net EPS Diluted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Net_Income__c</fullName>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Net_Property_Plant_Equipment__c</fullName>
        <description>Net Property Plant &amp; Equipment</description>
        <label>Net Property Plant &amp; Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Other_Operating_Expenses__c</fullName>
        <description>Other Operating Expenses, Total</description>
        <label>Other Operating Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Restatement_Type__c</fullName>
        <label>Restatement Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Return_on_Assets__c</fullName>
        <label>Return on Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Return_on_Equity__c</fullName>
        <description>Return on Equity %</description>
        <label>Return on Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Return_on_Total_Capital__c</fullName>
        <label>Return on Total Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Revenues__c</fullName>
        <label>Revenues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Tangible_Book_Value__c</fullName>
        <label>Tangible Book Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Total_Assets__c</fullName>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Total_Cash_And_Short__c</fullName>
        <description>Total Cash And Short Term Investments</description>
        <label>Total Cash And Short</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Total_Common_Equity__c</fullName>
        <label>Total Common Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Total_Current_Assets__c</fullName>
        <label>Total Current Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Total_Current_Liabilities__c</fullName>
        <label>Total Current Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Total_Equity__c</fullName>
        <label>Total Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Total_Liabilities__c</fullName>
        <description>Total Liabilities – (Standard/Utility Template)</description>
        <label>Total Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Total_Preferred_Equity__c</fullName>
        <label>Total Preferred Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Total_Revenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Unlevered_Free_Cash_Flow__c</fullName>
        <label>Unlevered Free Cash Flow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>S&amp;P Capital IQ Financials</label>
    <listViews>
        <fullName>SNPCAPIQ__All</fullName>
        <columns>NAME</columns>
        <columns>SNPCAPIQ__Account__c</columns>
        <columns>SNPCAPIQ__Fiscal_Period_Ending__c</columns>
        <columns>SNPCAPIQ__Filing_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>S&amp;P Capital IQ Financials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S&amp;P Capital IQ Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>